@@ -1,3 +1,14 @@
+2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	* flumotion/component/consumers/httpfragstreamer/common.py:
+	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
+	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
+	* flumotion/component/consumers/httpfragstreamer/mpegtssegmenter.py:
+	* flumotion/component/consumers/httpfragstreamer/resources.py:
+	* flumotion/component/muxers/mpegts/mpegts.py:
+	* flumotion/test/test_dummy.py:
+	Fix pep8
+
 2009-12-16  Marc-André Lureau  <mlureau@flumotion.com>
 
 	* flumotion/component/muxers/mpegts/Makefile.am:
